--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
     const PIX_KEY = "369c15dc-6018-4442-8c06-c48afc8ebad4";
 
     const defaultProducts = [
-      {id:1,name:'Notebook Gamer A4',desc:'i5, 8GB, SSD 512GB',price:2499.00},
-      {id:2,name:'Notebook Slim B',desc:'i3, 8GB, SSD 256GB',price:1799.00},
-      {id:3,name:'PC Gamer - Ryzen 5',desc:'Ryzen5, 16GB, RTX 1650',price:3499.00},
-      {id:4,name:'Monitor 24\" FullHD',desc:'IPS, 75Hz',price:599.00}
+      {id:1,name:'Notebook Gamer A4',desc:'i5, 8GB, SSD 512GB',price:2499.00,img:'img/notebook1.jpg'},
+      {id:2,name:'Notebook Slim B',desc:'i3, 8GB, SSD 256GB',price:1799.00,img:'img/notebook2.jpg'},
+      {id:3,name:'PC Gamer - Ryzen 5',desc:'Ryzen5, 16GB, RTX 1650',price:3499.00,img:'img/pcgamer.jpg'},
+      {id:4,name:'Monitor 24\" FullHD',desc:'IPS, 75Hz',price:599.00,img:'img/monitor.jpg'}
     ];
     let products = [...defaultProducts];
     let cart = {};
@@ -157,7 +157,7 @@
       products.forEach(p=>{
         const card=document.createElement('div');card.className='card'; card.setAttribute('role','listitem');
         card.innerHTML=`
-          <div class="img" aria-hidden="true">${String(p.name).split(' ')[0]}</div>
+          <div class="img" aria-hidden="true"><img src="${p.img}" alt="${p.name}" style="max-height:100%;max-width:100%;border-radius:6px"></div>
           <div class="title">${p.name}</div>
           <div class="small">${p.desc}</div>
           <div class="price">${formatMoney(p.price)}</div>
