--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </aside>
     </main>
 
-    <footer>Katende — Loja de eletrônicos • Exemplo funcional (frontend).</footer>
+    <footer>Katende store — todos os direitos reservados •.</footer>
   </div>
 
   <div class="modal" id="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title">
